# GlGallery

./: .gitignore  CMakeLists.txt
DOCS/: README.md
src/: draw.cpp
src/primitives/: primitives.hpp  pyramid.cpp
